# zeroclaw

./: .gitignore  Cargo.toml
crates/zeroclaw-memory/: Cargo.toml
crates/zeroclaw-plugins/: Cargo.toml
crates/zeroclaw-plugins/src/: host.rs  lib.rs
crates/zeroclaw-runtime/: Cargo.toml
docs/: SUMMARY.md
src/: main.rs
src/config/: schema.rs
src/doctor/: mod.rs
src/gateway/: api_plugins.rs  mod.rs
src/plugins/: error.rs  host_functions.rs  loader.rs  mod.rs
src/security/: audit.rs  mod.rs
src/tools/: mod.rs
tests/integration/: mod.rs  plugin_allowed_tools_filter.rs  plugin_api_get_plugin.rs  plugin_api_install_auth_required.rs  plugin_api_install_endpoint.rs  plugin_api_install_error_descriptive.rs  plugin_api_install_uses_host_logic.rs  plugin_api_reload_plugins.rs  plugin_api_remove_plugin.rs  plugin_api_remove_uses_host_logic.rs  plugin_audit_output_format.rs  plugin_call_depth_limit.rs  plugin_cli_audit_logged.rs  plugin_cli_command_args_logged.rs  plugin_cli_defaults_applied.rs  plugin_cli_rate_limit_clear_error.rs  plugin_cli_relaxed_requires_allowlist.rs  plugin_cli_which_resolution.rs  plugin_cli_wildcard_rejected.rs  plugin_cli_working_dir_restricted.rs  plugin_config_edit_nonsensitive.rs  plugin_config_roundtrip.rs  plugin_config_status_display.rs  plugin_csharp_messaging_host_function_call.rs  plugin_csharp_tools_error_throws_exception.rs  plugin_csharp_tools_exposes_tool_call.rs  plugin_csharp_tools_host_function_call.rs  plugin_csharp_tools_success_returns_output.rs  plugin_default_mode.rs  (+29 more)
web/: package-lock.json  package.json
(+15 files in other folders)
